     * Remove lingering references to the old master branch.
     * Add safeguard against rare FPE with what looks like an issue with the
       Intel OneAPI compiler during integration of S(alpha,beta).
     * Add infrastructure for accessting test data from C++ test apps"
     * Add various developer utility scripts (valgrind, gdb, gperfcpu, vtune) in
       devel/simplebuild/static/NCDev pkg.
     * ...

v4.1.8 2025-05-07
     * Aligh common utilities with MCPL project (specifically CMake code, test
       code, and C file utils).
     * Fix potentially uninitialised variable in pyrolythic graphite model (in
       the move constructor of the LCHelper::Overlay class).
     * Python API: The vdos.extractKnl function now optionally supports a
       targetEmax parameter, and returns suggestedEmax amongst the results.
     * C API: Replace the ncrystal_raw_vdos2knl function with
       ncrystal_raw_vdos2kernel, which supports target_emax/suggested_emax
       parameters. the old function is for now still available.
     * Python API: The NCrystal.misc.detect_scattering_components will no longer
       provide spurious failures due to testing with vdoslux=0 when probing the
       inelastic components. It will still try vdoslux=0 first, but in case it
       fails due to the VDOS expansion being too slow for the vdoslux=0
       settings, it will retry with unchanged vdoslux settings (related to
       github issue #262).

v4.1.6 2025-03-30
     * Fix bug which prevented more than 32 phases in multiphase materials
       (github issue #252).
     * Remove two leftover lines at top of LICENSE files. Now they are exactly
       the same as the file at http://www.apache.org/licenses/LICENSE-2.0.
     * Remove space in NCDefs.hh in `operator ""_s` which introduced compilation
       warning with Intel OneAPI compiler version 2025.1.

v4.1.4 2025-03-03
     * README files for the ncrystal-core, ncrystal-python, and ncrystal-verify